Fixed Delete button not showing

--- a/frontend/src/Manager/MenuItems.css
+++ b/frontend/src/Manager/MenuItems.css
@@ -4,6 +4,7 @@
     height: 100%;
     justify-content: center;
     align-items: center;
+    margin-bottom: 60px;
 }
   .large-text .manager-menu-items, .large-text .h2, .large-text .left-panel, .large-text .right-panel, .large-text .selected {
     font-size: 30px;
